<resources>
    <string name="app_name">Popular Movies</string>
    <string name="most_popular">Most Popular</string>
    <string name="latest">Latest</string>
    <string name="movies">Movies</string>
    <string-array name="sort_order">
        <item name="popular">Most Popular</item>
        <item name="rating">Highest Rated</item>
    </string-array>
    <string name="rating_format">Rating: %.2f</string>
    <string name="popularity_format">Popularity: %.2f</string>
    <string name="date_format">Release Date:\n%s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="check_internet_connnection">Please check your internet connection</string>
    <string name="overview">OVERVIEW</string>
    <string name="top_grossing">Top Grossing</string>
    <string name="top_rated">Top Rated</string>
    <string name="add_favourite">Add To favorites</string>
    <string name="favourites">Favourites</string>
    <string name="no_reviews">This movie has not been reviewed by anyone yet</string>
    <string name="no_trailers">No trailers found for this movie</string>
    <string name="share_link">Share Link</string>
    <string name="select_movie">Select a movie to view its details</string>
</resources>
